# 3cx-mcp

./: .coverage  .gitignore  3cx-API.md  CLAUDE.md  DEBUGGING-ADD-ON.md  DESIGN-debugging-add-on.md  DESIGN.md  README.md  REQUIREMENTS-debugging-add-on.md  coverage.xml  pyproject.toml  pytest.ini  requirements-debugging.txt
docs/schema/: INDEX.md  README.md  call-tables.md  cdr-tables.md  config-tables.md  media-tables.md  other-tables.md
src/: __init__.py  config.py
src/database/: __init__.py  connection.py  schema.py
src/logs/: __init__.py  parser.py
src/tools/: __init__.py  audit.py  calls.py  logs.py  participants.py  queues.py
tests/: README.md  conftest.py
tests/fixtures/: test_data.py
tests/unit/: test_audit.py  test_calls.py  test_config.py  test_database.py  test_log_parser.py  test_logs.py  test_participants.py  test_queues.py  test_schema.py
